re PR c++/27979 (conversion check confused by enum bitfields)

PR c++/27979
	* call.c (standard_conversion): Strip cv-qualifiers from bitfield
	types.
	PR c++/27979
	* g++.dg/expr/bitfield2.C: New test.

From-SVN: r114733